--- a/android-youtube-player/publish.gradle
+++ b/android-youtube-player/publish.gradle
@@ -6,7 +6,7 @@ afterEvaluate {
             release(MavenPublication) {
                 groupId = 'ai.shortform-play.sdk.ratel.player.android'
                 artifactId = 'android-youtube-player'
-                version = '12.1.1'
+                version = '12.1.1.1' // 미어너 버전 수정 마지막 자리
 
                 from components.release
 
